# TRASNFORMER

./: CMakeCache.txt  CMakeLists.txt  FashionMNISTTransformer  Makefile  README.md  TestMatmulCUDA  cmake_install.cmake  dashboard.py  main  main_fake.cpp  matrix_test  matrix_test.cpp  predictions.csv  python_visualizater.py  test_metrics.csv
include/: cuda_ops.cu  cuda_ops.h  matrix.h  matrix_cuda.cu
src/: Makefile  matrix.cpp  matrix_cuda.cu  transformer.cpp
